<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbackground"
    tools:context="com.tfg.mifeed.controlador.activities.Activities.GestionCuenta.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/incioSesion"
                android:textColor="#ffff"
                android:textSize="60sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextCorreo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="@string/correo"
                android:background="@drawable/fondo_editext"
                android:drawableStart="@drawable/ic_email"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/errLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/errEmailVacio"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextTextPass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="@string/contraseña"
                android:background="@drawable/fondo_editext"
                android:drawableStart="@drawable/ic_pass"
                android:ems="10"
                android:hint="@string/contraseña"
                android:inputType="textPersonName|textPassword"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/errLoginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/errContraseñaVacia"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ejecutarInicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/toRegistro"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="43dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="243dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/incioSesion"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/btn_aceptar" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Login"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                        app:layout_constraintEnd_toEndOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/toRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteX="7dp"
                    tools:layout_editor_absoluteY="73dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/toRegistro"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/btn_atras" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Reg"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/toReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/olvido"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/btn_problemas" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/olvido"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintEnd_toEndOf="@+id/imageView7"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView7" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left|end"
        android:contentDescription="@string/descripcionDecoracion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/ola_violeta" />

</androidx.constraintlayout.widget.ConstraintLayout>