...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbackground"
    tools:context=".controlador.activities.Activities.Prensa.PrensaActivity">

    <FrameLayout
        android:id="@+id/framePrensa"
        android:layout_width="0dp"
        android:layout_height="660dp"
        android:background="@color/mainbackground"
        app:layout_constraintBottom_toTopOf="@+id/barraApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView"
        app:layout_constraintVertical_bias="0.161">

    </FrameLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
...
