...
    <string name="txtNegocios">Negocios</string>
    <string name="txtOcio">Ocio (cine/tv…)</string>
    <string name="txtCiencia">Ciencia</string>
    <string name="txtMedicina">Salud</string>
    <string name="txtTecnologia">Tecnologia</string>
    <string name="txtTemas">Temas</string>
    <string name="txtAceptar">Aceptar</string>
    <string name="txtSeleccionMedios">Selecciona al menos un medio</string>
    <string name="txtFavs">Favoritos</string>
    <string name="txtCat">Categorías</string>
    <string name="txtImp">Importantes</string>
    <string name="txtEtiq">Etiquetas</string>
    <string name="txtNombreWeb">Nombre para asignar a la web</string>
    <string name="txtPodcast">Podcast</string>
    <string name="txtPrensa">Prensa</string>
    <string name="txtSeleccionCat">Selecciona una categoría</string>
    <string name="txtAjustes">Ajustes</string>
    <string name="txtBusqueda">Buscar</string>
...
