...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloEtiquetas" />

    <ImageView
        android:id="@+id/addEtiqueta"
        android:layout_width="86dp"
        android:layout_height="75dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/contentCrearEtiqueta"
        android:src="@drawable/btn_add"
...
