package com.tfg.mifeed.controlador.activities.Activities;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.*;
import static androidx.test.espresso.assertion.ViewAssertions.*;
import static androidx.test.espresso.matcher.ViewMatchers.*;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;
import androidx.test.espresso.ViewInteraction;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;
import com.tfg.mifeed.R;
import com.tfg.mifeed.controlador.activities.Activities.Prensa.PrensaActivity;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class CreacionEtiquetaTest {

  @Rule
  public ActivityScenarioRule<PrensaActivity> mActivityScenarioRule =
      new ActivityScenarioRule<>(PrensaActivity.class);

  @Test
  public void creacionEtiquetaTest() {
    ViewInteraction bottomNavigationItemView =
        onView(
            allOf(
                withId(R.id.frag_etiquetas),
                withContentDescription("Etiquetas"),
                childAtPosition(childAtPosition(withId(R.id.bottomNavigationView), 0), 3),
                isDisplayed()));
    bottomNavigationItemView.perform(click());

    ViewInteraction appCompatImageView =
        onView(
            allOf(
                withId(R.id.addEtiqueta),
                childAtPosition(childAtPosition(withId(R.id.framePrensa), 0), 1),
                isDisplayed()));
    appCompatImageView.perform(click());

    ViewInteraction editText =
        onView(
            allOf(
                childAtPosition(
                    allOf(
                        withId(android.R.id.custom),
                        childAtPosition(withClassName(is("android.widget.FrameLayout")), 0)),
                    0),
                isDisplayed()));
    editText.perform(replaceText("nueva"), closeSoftKeyboard());

    ViewInteraction materialButton =
        onView(
            allOf(
                withId(android.R.id.button1),
                withText("Aceptar"),
                childAtPosition(
                    childAtPosition(withClassName(is("android.widget.ScrollView")), 0), 3)));
    materialButton.perform(scrollTo(), click());
  }

  private static Matcher<View> childAtPosition(
      final Matcher<View> parentMatcher, final int position) {

    return new TypeSafeMatcher<View>() {
      @Override
      public void describeTo(Description description) {
        description.appendText("Child at position " + position + " in parent ");
        parentMatcher.describeTo(description);
      }

      @Override
      public boolean matchesSafely(View view) {
        ViewParent parent = view.getParent();
        return parent instanceof ViewGroup
            && parentMatcher.matches(parent)
            && view.equals(((ViewGroup) parent).getChildAt(position));
      }
    };
  }
}
